--- a/pipeline_1.yml
+++ b/pipeline_1.yml
@@ -42,3 +42,17 @@ parameters:
       - true
       - false
 
+stages:
+- stage: prerequisites
+  jobs:
+    - job:  createResourceGroup
+      steps:
+        - task: AzureCLI@2
+          inputs:
+            connectedServiceNameARM: '${{ parameters.azureServicePrincipal }}'
+            scriptType:  bash
+            scriptLocation: inlineScript
+            inlineScript:  az group create -l ${{ parameters.location }} -n ${{ parameters.resourceGroupPrefix }}-${{ parameters.environment }}-rg
+            failOnStandardError:  true
+
+        
