split piplines into master and dev

--- a/pipeline_master.yml
+++ b/pipeline_master.yml
@@ -1,6 +1,12 @@
 trigger:
-  - master
-  - dev
+  branches:
+    include:
+    - master
+    exclude:
+    - dev
+  paths:
+    exclude:
+    - *.yaml
 
 pool:
   vmImage: ubuntu-latest
