--- a/pipelines/pipeline_.yml
+++ b/pipelines/pipeline_.yml
@@ -7,6 +7,8 @@ trigger:
     exclude:
     - 'pipelines/*.yml'
     - docs/README.md
+    - 'config/*'
+    - 'license/*'
 
 pool:
   vmImage: ubuntu-latest
