--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -44,14 +44,16 @@ parameters:
       - false
 
 jobs:
-  - job: createResourceGroup
+  - job: prerequisites
     steps:
       - task: AzureCLI@2
         inputs:
           connectedServiceNameARM: ${{ parameters.azureServicePrincipal }}
           scriptType: bash
           scriptLocation: inlineScript
-          inlineScript: az group create -l ${{ parameters.location }} -n ${{ parameters.subnetPrefix }}-${{ parameters.environment }}-rg
+          inlineScript: |
+            az group create -l ${{ parameters.location }} -n ${{ parameters.subnetPrefix }}-${{ parameters.environment }}-rg
+            az vm image terms accept --urn paloaltonetworks:vmseries-flex:byol:10.1.6
           failOnStandardError: true
 
   
