--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -5,7 +5,7 @@ trigger:
       - master
   paths:
     exclude:
-      - "pipelines/*.yml"
+      #- "pipelines/*.yml"
       - docs/README.md
       - "config/*"
       - "license/*"
