--- a/pipelines/pipeline_test.yml
+++ b/pipelines/pipeline_test.yml
@@ -13,12 +13,12 @@ pool:
 
 steps:
 - script: |
-    echo '$(resources.pipeline.myresourcevars.pipelineID)'
-    echo '$(resources.pipeline.myresourcevars.runName)'
-    echo '$(resources.pipeline.myresourcevars.runID)'
-    echo '$(resources.pipeline.myresourcevars.runURI)'
-    echo '$(resources.pipeline.myresourcevars.sourceBranch)'
-    echo '$(resources.pipeline.myresourcevars.sourceCommit)'
-    echo '$(resources.pipeline.myresourcevars.sourceProvider)'
-    echo '$(resources.pipeline.myresourcevars.requestedFor)'
-    echo '$(resources.pipeline.myresourcevars.requestedForID)'
+    echo $(resources.pipeline.pipeline_main.pipelineID)
+    echo $(resources.pipeline.pipeline_main.runName)
+    echo $(resources.pipeline.pipeline_main.runID)
+    echo $(resources.pipeline.pipeline_main.runURI)
+    echo $(resources.pipeline.pipeline_main.sourceBranch)
+    echo $(resources.pipeline.pipeline_main.sourceCommit)
+    echo $(resources.pipeline.pipeline_main.sourceProvider)
+    echo $(resources.pipeline.pipeline_main.requestedFor)
+    echo $(resources.pipeline.pipeline_main.requestedForID)
