--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -11,18 +11,18 @@ trigger:
       - "license/*"
 
 parameters:
-  - name: subnetPrefix
-    displayName: Subnet Prefix
-    type: string
-    default: fwlab
-  - name: environment
-    displayName: Environment
-    default: sandbox
-    type: string
-    values:
-      - prod
-      - dev
-      - sandbox
+#  - name: subnetPrefix
+#    displayName: Subnet Prefix
+#    type: string
+#    default: fwlab
+#  - name: environment
+#    displayName: Environment
+#    default: sandbox
+#    type: string
+#    values:
+#      - prod
+#      - dev
+#      - sandbox
   - name: azureServicePrincipal
     displayName: Azure Service Principal
     type: string
@@ -35,13 +35,16 @@ parameters:
       - westus3
       - westus2
       - westus
-  - name: deployfirewall
-    displayName: Deploy Firewall toggle
-    type: string
-    default: true
-    values:
-      - true
-      - false
+#  - name: deployfirewall
+#    displayName: Deploy Firewall toggle
+#    type: string
+#    default: true
+#    values:
+#      - true
+#      - false
+
+variables:
+- group: firewall-vars-1
 
 jobs:
   - job: prerequisites
@@ -52,7 +55,7 @@ jobs:
           scriptType: bash
           scriptLocation: inlineScript
           inlineScript: |
-            az group create -l ${{ parameters.location }} -n ${{ parameters.subnetPrefix }}-${{ parameters.environment }}-rg
+            az group create -l $(location) -n $(subnetPrefix)-$(environment)-rg
             az vm image terms accept --urn paloaltonetworks:vmseries-flex:byol:10.1.6
           failOnStandardError: true
 
