add azure.azcli | pipeline_main: add stage createFirewall

--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -71,5 +71,21 @@ stages:
           inlineScript:  az vm image terms accept --urn paloaltonetworks:vmseries-flex:byol:10.1.6
           failOnStandardError: true
 
-
+- stage: createFirewall
+  jobs:
+    - job: deployTemplate
+      steps:
+        - bash: echo 'Deploying the firewall'
+        - task: AzureResourceManagerTemplateDeployment@3
+          inputs:
+            deploymentScope: 'Resource Group'
+            azureResourceManagerConnection: ${{ parameters.azureServicePrincipal }}
+            action: 'Create Or Update Resource Group'
+            resourceGroupName: sfc-$(subnetPrefix)-$(environment)-rg
+            location: $(location)
+            templateLocation: 'Linked artifact'
+            csmFile: firewall.json
+            csmParametersFile: firewall.parameters.json
+            overrideParameters: -adminPassword $(adminPassword) -bootstrapAccessKey $(bootstrapAccessKey) -deployFirewall $(deployFirewall)
+            deploymentMode: 'Incremental'
   
