--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -79,6 +79,8 @@ stages:
             echo 'adminPassword  = '$(adminPassword)
             echo 'bootstrapAccessKey = '$(bootstrapAccessKey)
             echo 'deployFirewall ='$(deployFirewall)
+            echo 'pwd'
+            echo 'ls -l'
 
 #    - job: deployTemplate
 #      steps:
