rename variables.cli | pipeline_main: add job test variables

--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -60,7 +60,7 @@ stages:
             connectedServiceNameARM: ${{ parameters.azureServicePrincipal }}
             scriptType: bash
             scriptLocation: inlineScript
-            inlineScript:  az group create -l $(location) -n sfc-$(subnetPrefix)-$(environment)-rg --tags Application=network Team=networking Department=it Environment=$(environment)
+            inlineScript:  az group create -l $(location) -n $(varResourceGroupName) --tags Application=network Team=networking Department=it Environment=$(environment)
             failOnStandardError:  true
     - job: acceptTerms
       dependsOn: createResourceGroup
@@ -80,8 +80,9 @@ stages:
         - bash: |
             echo 'adminPassword  = '$(adminPassword)
             echo 'bootstrapAccessKey = '$(bootstrapAccessKey)
-            echo 'deployFirewall ='$(deployFirewall)
-            echo 'varResourceGroupName ='$(varResourceGroupName)
+            echo 'deployFirewall = '$(deployFirewall)
+            edho 'location = '$(location)
+            echo 'varResourceGroupName = '$(varResourceGroupName)
             echo 'pwd'
             pwd
             echo 'ls -l'
