pipeline_main: uncomment job deployTemplate

--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -88,19 +88,19 @@ stages:
             echo 'ls -l'
             ls -l
 
-#    - job: deployTemplate
-#      steps:
-#        - bash: echo 'Deploying the firewall'
-#        - task: AzureResourceManagerTemplateDeployment@3
-#          inputs:
-#            deploymentScope: 'Resource Group'
-#            azureResourceManagerConnection: ${{ parameters.azureServicePrincipal }}
-#            action: 'Create Or Update Resource Group'
-#            resourceGroupName: sfc-$(subnetPrefix)-$(environment)-rg
-#            location: $(location)
-#            templateLocation: 'Linked artifact'
-#            csmFile: firewall.json
-#            csmParametersFile: firewall.parameters.json
-#            overrideParameters: -adminPassword $(adminPassword) -bootstrapAccessKey $(bootstrapAccessKey) -deployFirewall $(deployFirewall)
-#            deploymentMode: 'Incremental'
+    - job: deployTemplate
+      steps:
+        - bash: echo 'Deploying the firewall'
+        - task: AzureResourceManagerTemplateDeployment@3
+          inputs:
+            deploymentScope: 'Resource Group'
+            azureResourceManagerConnection: ${{ parameters.azureServicePrincipal }}
+            action: 'Create Or Update Resource Group'
+            resourceGroupName: $(varResourceGroupName)
+            location: $(location)
+            templateLocation: 'Linked artifact'
+            csmFile: firewall.json
+            csmParametersFile: firewall.parameters.json
+            overrideParameters: -adminPassword $(adminPassword) -bootstrapAccessKey $(bootstrapAccessKey) -deployFirewall $(deployFirewall)
+            deploymentMode: 'Incremental'
   
