pipeline_main: comment out deployFirewall (not in template)

--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -101,6 +101,6 @@ stages:
             templateLocation: 'Linked artifact'
             csmFile: firewall.json
             csmParametersFile: firewall.parameters.json
-            overrideParameters: -adminPassword $(adminPassword) -bootstrapAccessKey $(bootstrapAccessKey) -deployFirewall $(deployFirewall)
+            overrideParameters: -adminPassword $(adminPassword) -bootstrapAccessKey $(bootstrapAccessKey) #-deployFirewall $(deployFirewall)
             deploymentMode: 'Incremental'
   
