--- a/pipelines/pipeline_main.yml
+++ b/pipelines/pipeline_main.yml
@@ -16,37 +16,19 @@ parameters:
     displayName: Azure Service Principal
     type: string
     default: JohnTudong_vs_sandbox_20230426
-###  moved to variable group 'firewall-vars-1'
-#  - name: subnetPrefix
-#    displayName: Subnet Prefix
-#    type: string
-#    default: fwlab
-#  - name: environment
-#    displayName: Environment
-#    default: sandbox
-#    type: string
-#    values:
-#      - prod
-#      - dev
-#      - sandbox
-#  - name: location
-#    displayName: Azure Region
-#    type: string
-#    default: westus3
-#    values:
-#      - westus3
-#      - westus2
-#      - westus
-#  - name: deployfirewall
-#    displayName: Deploy Firewall toggle
-#    type: string
-#    default: true
-#    values:
-#      - true
-#      - false
 
 variables:
-- group: firewall-vars-1
+- group: firewall-vars-1                             # Group variables
+                                                          #   deployFirwall
+                                                          #   environment
+                                                          #   location
+                                                          #   parameterFile
+                                                          #   subnetPrefix
+                                                          #   templateFile
+                                                          # Pipeline variables
+                                                          #   adminPassword
+                                                          #   bootstrapAccessKey
+                                                          #
 - name: varResourceGroupName
   value: sfc-$(subnetPrefix)-$(environment)-rg
 
