--- a/pipelines/pipeline_test.yml
+++ b/pipelines/pipeline_test.yml
@@ -1,13 +1,26 @@
-resources:
-  pipelines:
-  - pipeline: main
-    source: pipeline_main
+parameters:
+  - name: azureServicePrincipal
+    displayName: Azure Service Principal
+    type: string
+    default: JohnTudong_vs_sandbox_20230426
 
 pool:
   vmImage: ubuntu-latest
 
 variables:
-- group: firewall-vars-1
+- group: firewall-vars-1                             # Group variables
+                                                          #   deployFirwall
+                                                          #   environment
+                                                          #   location
+                                                          #   parameterFile
+                                                          #   subnetPrefix
+                                                          #   templateFile
+                                                          # Pipeline variables
+                                                          #   adminPassword
+                                                          #   bootstrapAccessKey
+                                                          #
+- name: varResourceGroupName
+  value: sfc-$(subnetPrefix)-$(environment)-rg
 
 steps:
 - script: |
@@ -23,3 +36,13 @@ steps:
     echo $(subnetPrefix)
     echo $(location)
     echo $(environment)
+jobs:
+  - job: createResourceGroup
+    steps:
+      - task: AzureCLI@2
+        inputs:
+          connectedServiceNameARM: ${{ parameters.azureServicePrincipal }}
+          scriptType: bash
+          scriptLocation: inlineScript
+          inlineScript:  az group create -l $(location) -n $(varResourceGroupName) --tags Application=network Team=networking Department=it Environment=$(environment)
+          failOnStandardError:  true
